# music_perception

./: .gitignore  CMakeLists.txt  package.xml  requirements.txt  setup.py
launch/: detect_onset.launch  guzheng_onsets.launch  harp_onsets.launch  onsets.launch
ly/: all_my_ducklings.ly  all_my_ducklings_experimental.ly  all_my_ducklings_experimental.midi
msg/: CQTStamped.msg  NoteOnset.msg  Piece.msg
pieces/: README.md
scripts/: detect_onset.py  ly2piece.py  onset_to_marker.py  piece_recorder.py  publish_piece.py
src/music_perception/: __init__.py  topiece.py
